--- a/app/src/main/res/layout/fragment_image_slider.xml
+++ b/app/src/main/res/layout/fragment_image_slider.xml
@@ -1,8 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
+<com.sa.mymoviedb.views.viewpods.ImageSliderViewPod
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/iv_fragment_slider"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="240dp"
-    android:scaleType="centerCrop"
-    android:src="@drawable/ic_launcher_background"/>
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/iv_fragment_slider"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_launcher_background" />
+
+    <org.mmtextview.components.MMTextView
+        android:id="@+id/tv_slider_movie_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Movie Title"
+        android:layout_gravity="center_vertical"
+        android:textColor="@color/full_white"
+        android:textSize="@dimen/text_heading_1x"
+        android:textStyle="bold"
+        android:layout_marginLeft="@dimen/margin_medium"
+        android:layout_marginTop="@dimen/margin_xxlarge"/>
+
+</com.sa.mymoviedb.views.viewpods.ImageSliderViewPod>
+
